// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`creates a new addComment action 1`] = `
Object {
  "comment": Object {
    "id": 1,
  },
  "type": "ADD_COMMENT",
}
`;

exports[`creates a new deleteComment action 1`] = `
Object {
  "comment": Object {
    "id": 1,
  },
  "type": "DELETE_COMMENT",
}
`;

exports[`creates a new incrementCommentCount action 1`] = `
Object {
  "postId": 1,
  "type": "INCREMENT_COMMENT_COUNT",
}
`;

exports[`creates a new updateCommentVoteCount action 1`] = `
Object {
  "comment": Object {
    "id": 1,
  },
  "type": "UPDATE_COMMENT_VOTE_COUNT",
  "voteCount": 2,
}
`;
